--- a/main.less
+++ b/main.less
@@ -19,7 +19,7 @@
 }
 
 .footer {
-    font-family: 'Maven Pro', sans-serif;
+    // font-family: 'Maven Pro', sans-serif;
     font-size: 14px;
     margin-bottom: 8px; // color: @primary-light;
     position: absolute;
@@ -28,7 +28,7 @@
     left: 50%;
     transform: translateX(-50%);
     img {
-        height: 14px;
+        height: 12px;
         text-align: center;
         margin-bottom: 2px;
     }
