--- a/main.less
+++ b/main.less
@@ -171,6 +171,7 @@ a {
         text-shadow: 0px 0px 6px fade(@primary-dark, 32%);
     }
     .link {
+        margin-bottom: 32px;
         a {
             border-bottom: 3px solid @primary-white;
             color: @primary-white;
@@ -186,6 +187,11 @@ a {
             background: @primary-white;
             border-color: @primary-white;
         }
+    }
+    .reminder{
+        font-family: 'Maven Pro', sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 1;
     }
 }
 
