--- a/main.less
+++ b/main.less
@@ -189,8 +189,8 @@ a {
         }
     }
     .reminder{
-        font-family: 'Maven Pro', sans-serif;
-        text-transform: uppercase;
+        // font-family: 'Maven Pro', sans-serif;
+        text-transform: lowercase;
         letter-spacing: 1;
     }
 }
