--- a/main.less
+++ b/main.less
@@ -354,6 +354,6 @@ a {
     color: @primary-light;
 }
 
-.display-control {
-    display: inline-block;
-}
+// .display-control {
+//     display: inline-block;
+// }
